# openapi-3.0.yml
@@ -1,20 +1,20 @@
 openapi: '3.0.3'
 info:
-  title: API Title
+  title: Todo App
   version: '1.0'
 servers:
   - url: http://localhost:6969/
 
 paths:
 
-  /:
+  /api/docs:
     get:
       summary: Get the swagger docs
       responses:
         '200':
           description: Displays the swagger-ui
 
-  /todos:
+  /api/todos:
     post:
       summary: Create a new to-do item
       requestBody:
@@ -41,7 +41,7 @@ paths:
         '200':
           description: A list of todos
 
-  /todos/{id}:
+  /api/todos/{id}:
     get:
       summary: Get a single to-do item by ID
       parameters:
